--- a/stylos/cupones.css
+++ b/stylos/cupones.css
@@ -1,4 +1,12 @@
-
+* {
+  font-family: "Roboto";
+  list-style: none;
+  margin: 0;
+  padding: 0;
+  text-decoration: none;
+  letter-spacing: 1px;
+  box-sizing: border-box;
+}
 body {
   background: #f9fafa;
   padding: 20px;
@@ -56,6 +64,7 @@ body {
 }
 .middle img {
   width: 100%;
+  
 }
 .bottom {
   text-align: center;
